Manifest/Staging/Backend/p-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-dev-service
  namespace: staging
spec:
  ports:
    - port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: backend-dev
  type: ClusterIP
